--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.9.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
